# zed

./: ANALYSIS.md  Cargo.toml  LINKED_ISSUES.md  PR_BODY.md  README.md  manifest.json  plan.md  typos.toml
.github/workflows/: background_agent_mvp.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/acp_thread/: Cargo.toml
crates/component_preview/: Cargo.toml
crates/dev_container/: Cargo.toml
crates/fs_benchmarks/: Cargo.toml
crates/gpui/: Cargo.toml  PLATFORM_EXTRACTION_PLAN.md  build.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_macos/: Cargo.toml  build.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/gpui_wgpu/: Cargo.toml
crates/gpui_windows/: Cargo.toml  build.rs
crates/gpui_windows/src/: clipboard.rs  direct_write.rs  directx_atlas.rs  directx_renderer.rs  dispatcher.rs  display.rs  events.rs  gpui_windows.rs  platform.rs  util.rs  window.rs
crates/livekit_client/: Cargo.toml
crates/project_benchmarks/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/worktree_benchmarks/: Cargo.toml
crates/zed/: Cargo.toml
docs/src/: update.md  (+3 more)
suggestions/: PR-44506.md  PR-46766.md  PR-47095.md  PR-47475.md  PR-47673.md  PR-47754.md  PR-47860.md  PR-48542.md  PR-48619.md  PR-48736.md  PR-48780.md  PR-48807.md  PR-48842.md  PR-48851.md  PR-48908.md  PR-48909.md  PR-48910.md  PR-48912.md  PR-48962.md  PR-48978.md  PR-48988.md  PR-49015.md  PR-49051.md  PR-49069.md  PR-49094.md  PR-49098.md  PR-49374.md
(+179 files in other folders)
